samples/_failures_safe/1761514239_7abb68_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d700c032.c: In function ‘main’:
./samples/SAFE/__tmp_d700c032.c:155:9: error: expected declaration or statement at end of input
  155 |         }
      |         ^
./samples/SAFE/__tmp_d700c032.c:155:9: error: expected declaration or statement at end of input
